--- a/dados.html
+++ b/dados.html
@@ -121,7 +121,7 @@ function limparHistorico(){
     if (!confirm("Apagar histórico?")) return;
     historico = [];
     salvarHist();
-    document.getElementById("imagemDado").src = "imagens/d6.png";
+    document.getElementById("imagemDado").src = "d6.png";
     document.getElementById("numeroD20").style.display = "none";
 }
 
@@ -130,4 +130,5 @@ atualizarHistorico();
 
 </body>
 </html>
+
 
