--- a/cadastro.html
+++ b/cadastro.html
@@ -36,7 +36,7 @@
     <table id="tabela"></table>
 </div>
 
-<script src="js/personagens.js"></script>
+<script src="personagens.js"></script>
 <script>
 
 /* ============================
@@ -140,3 +140,4 @@ listar();
 
 </body>
 </html>
+
