--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 </style>
 
-<script src="js/personagens.js"></script>
+<script src="personagens.js"></script>
 
 </head>
 <body>
@@ -282,4 +282,5 @@ carregarPersonagens();
 
 </body>
 </html>
+
 
