--- a/cadastro.html
+++ b/cadastro.html
@@ -5,14 +5,14 @@
 <title>Cadastro de Personagens</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-    body { background:#111; color:white; font-family:Arial; padding:20px; }
-    .card { background:#1e1e1e; padding:20px; border-radius:10px; margin-bottom:25px; }
-    input { width:100%; padding:10px; margin:6px 0; border-radius:6px; border:none; }
-    button { padding:10px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; }
-    table { width:100%; margin-top:20px; border-collapse:collapse; }
-    td, th { padding:12px; border-bottom:1px solid #333; }
-    th { background:#222; }
-    a { color:#4fc3f7; text-decoration:none; }
+body { background:#111; color:white; font-family:Arial; padding:20px; }
+.card { background:#1e1e1e; padding:20px; border-radius:10px; margin-bottom:25px; }
+input { width:100%; padding:10px; margin:6px 0; border-radius:6px; border:none; }
+button { padding:10px; border:none; border-radius:6px; cursor:pointer; font-weight:bold; }
+table { width:100%; margin-top:20px; border-collapse:collapse; }
+td, th { padding:12px; border-bottom:1px solid #333; }
+th { background:#222; }
+a { color:#4fc3f7; text-decoration:none; }
 </style>
 </head>
 <body>
@@ -22,12 +22,10 @@
 
 <div class="card">
     <h3>Novo Personagem</h3>
-
     <input id="nome" placeholder="Nome">
     <input id="vida" type="number" placeholder="Vida">
     <input id="dano" type="number" placeholder="Dano">
     <input id="agilidade" type="number" placeholder="Agilidade">
-
     <button style="background:#4caf50; width:100%;" onclick="criarPersonagem()">Salvar</button>
 </div>
 
@@ -38,51 +36,29 @@
 
 <script src="personagens.js"></script>
 <script>
-
-/* ============================
-     ADICIONAR À BATALHA
-============================ */
 function adicionarNaBatalha(id) {
     const personagens = getPersonagens();
     const batalha = JSON.parse(localStorage.getItem("fluxo_batalha") || "[]");
-
     const personagem = personagens.find(p => p.id === id);
-
-    if (!personagem) {
-        alert("Erro: Personagem não encontrado!");
-        return;
-    }
-
+    if (!personagem) return alert("Erro: Personagem não encontrado!");
     batalha.push(personagem);
-
     localStorage.setItem("fluxo_batalha", JSON.stringify(batalha));
-
     alert(`⚔️ ${personagem.nome} foi adicionado à batalha!`);
 }
 
-/* ============================
-        CRIAR PERSONAGEM
-============================ */
 function criarPersonagem() {
     const p = {
-        nome: nome.value,
+        nome: nome.value.trim(),
         vida: Number(vida.value),
         dano: Number(dano.value),
         agilidade: Number(agilidade.value)
     };
-
-    if (!p.nome || !p.vida || !p.dano || !p.agilidade) {
-        alert("Preencha todos os campos!");
-        return;
-    }
-
+    if (!p.nome || !p.vida || !p.dano || !p.agilidade) return alert("Preencha todos os campos!");
     addPersonagem(p);
     listar();
+    nome.value = vida.value = dano.value = agilidade.value = "";
 }
 
-/* ============================
-        REMOVER PERSONAGEM
-============================ */
 function remover(id) {
     if (confirm("Excluir personagem?")) {
         deletePersonagem(id);
@@ -90,54 +66,35 @@ function remover(id) {
     }
 }
 
-/* ============================
-        EDITAR PERSONAGEM
-============================ */
 function editar(id) {
     const novoNome = prompt("Novo nome:");
     if (!novoNome) return;
-
     updatePersonagem(id, { nome: novoNome });
     listar();
 }
 
-/* ============================
-       LISTAR PERSONAGENS
-============================ */
 function listar() {
     const tabela = document.getElementById("tabela");
     const lista = getPersonagens();
-
     tabela.innerHTML = `
         <tr>
-            <th>Nome</th>
-            <th>Vida</th>
-            <th>Dano</th>
-            <th>Agilidade</th>
-            <th>Ações</th>
-        </tr>
-    `;
-
+            <th>Nome</th><th>Vida</th><th>Dano</th><th>Agilidade</th><th>Ações</th>
+        </tr>`;
     lista.forEach(p => {
         tabela.innerHTML += `
             <tr>
-                <td>${p.nome}</td>
-                <td>${p.vida}</td>
-                <td>${p.dano}</td>
-                <td>${p.agilidade}</td>
+                <td>${p.nome}</td><td>${p.vida}</td><td>${p.dano}</td><td>${p.agilidade}</td>
                 <td>
                     <button onclick="editar(${p.id})" style="background:#1976d2;">Editar</button>
                     <button onclick="remover(${p.id})" style="background:#c62828;">Excluir</button>
                     <button onclick="adicionarNaBatalha(${p.id})" style="background:#43a047;">⚔️ Batalhar</button>
                 </td>
-            </tr>
-        `;
+            </tr>`;
     });
 }
 
 listar();
 </script>
-
 </body>
 </html>
 
